maps script updated from g-maps

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                       </div>
                     </div>
                     <div class="col-md-6">
-                      <div id="googleMap" style="width:100%;height:400px;"></div>
+                      <div id="map" style="width:100%;height:400px;"></div>
                     </div>
                   </div>
                 </div>
@@ -813,7 +813,8 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/fontawesome.js"></script>
   <script src="js/main.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqNzTcMULRgUpe93sR2oVTQCpwhHqnIfU&callback=myMap&library=places"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqNzTcMULRgUpe93sR2oVTQCpwhHqnIfU&callback=initMap">
+  </script>
 </body>
 
 </html>
