--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
                                 <input class="form-control" id="inputPassword4" type="text">
                               </div>
                             </div>
+                            <!-- Pickup location -->
                             <div class="form-group">
                               <label for="inputAddress">Pickup Location</label>
-                              <input class="form-control" id="inputAddress" type="text" placeholder="Enter a location">
+                              <div class="inputAdress-input">
+                                <input class="form-control" id="inputAddress" type="text" placeholder="Enter a location">
+                                <button role="button" class="pickup-button" id="add-waypoint">+</button>
+                              </div>
                             </div>
                             <div class="form-group">
                               <label for="inputAddress2">Drop-off-location</label>
@@ -170,6 +174,7 @@
                     </div>
                     <div class="col-md-6">
                       <div id="map" style="width:100%;height:400px;"></div>
+                      <div id="total"></div>
                     </div>
                   </div>
                 </div>
@@ -813,7 +818,7 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/fontawesome.js"></script>
   <script src="js/main.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqNzTcMULRgUpe93sR2oVTQCpwhHqnIfU&callback=initMap">
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqNzTcMULRgUpe93sR2oVTQCpwhHqnIfU&callback=initMap&libraries=places">
   </script>
 </body>
 
